# fastSQLiteAPI

./: Dockerfile  database.sqlite  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py
app/routes/: query.py
